1999-07-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* include/simple.h: Add simple_set_prop decl.

	* lib/simple.c: Use <> for simple.h.
	(read_texture, modify_info, load_texture): New functions.
	(simple_set_prop): New function.

	* bin/main.cc (class clock_app): New class replacing struct
	app_data.
	(class clock_app): Add member accels and destructor.
	(create_window): Pass accels to GtkItemFactory.
	(~clock_app): New function.
	(clock_app): Make a new GtkAccelGroup.

1999-07-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* profile.cc (save): Use xmlNewDocNode.

1999-07-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* configure.in: Change the version number to 1.3.4.

	* NEWS: Modified.

	* rglclock.1: Modified.

1999-07-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/main.cc (create_widget): Set geometry hints.
	(create_widget): Revise last change and set policy.

	* rglclock.1: Modified.

	* main.cc (longopts): Add `--private-colormap' option.
	(display_help): Update the help message.
	(main): Pass opt_private_colormap to gdk_colormap_new.

1999-07-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (dist-snapshot distcheck-snapshot): Removed.

	* bin/Makefile.am: New file.

	* lib/Makefile.am: New file.

	* include/Makefile.am: New file.

	* Makefile.am: Updated.

	* Move library sources to lib, library headers to include, and
	other sources to bin.

1999-07-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Modified.

	* configure.in: Set version to 1.3.3.

	* rglclock.1: Modified.

	* glclock.cc (handle_expose_event): Add drawing code.
	(update): #if out drawing code and use gtk_widget_queue_draw
	instead.
	(create_widget): Connect "expose_event" to its handler.

1999-05-28  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* AUTHORS: Modified.

	* NEWS: Modified.

	* main.cc (parse_options): Use getopt_long unconditionally.

	* configure.in: Removed tests for <getopt.h> and getopt_long.
